# swayalt-rs

./: .envrc  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix
src/: main.rs
